Fix: Exception Handler Additions, paystack webhook fix